[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene/Samuel/TitleScreen/TitleScreen.gd" type="Script" id=1]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 599.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartBtn" type="Button" parent="Container"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="QuitBtn" type="Button" parent="Container"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
text = "Quit"

[connection signal="pressed" from="Container/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="Container/QuitBtn" to="." method="_on_QuitBtn_pressed"]
